# Trading-Tracking-Dashboard

./: .gitignore  LICENSE  Makefile  README.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: health.py
backend/app/core/: config.py
backend/app/db/: base.py
frontend/app/: globals.css  layout.tsx
frontend/app/(workspace)/: layout.tsx
frontend/app/(workspace)/_components/: AccountRail.tsx  ModuleRail.tsx  PlaceholderPage.tsx  Sidebar.tsx  icons.tsx
frontend/app/(workspace)/_config/: workspace.ts
frontend/app/(workspace)/ai/: page.tsx
frontend/app/(workspace)/dashboard/: page.tsx
frontend/app/(workspace)/holdings/: page.tsx
frontend/app/(workspace)/news/: page.tsx
frontend/app/(workspace)/orders/: page.tsx
frontend/app/(workspace)/performance/: page.tsx
frontend/app/(workspace)/pnl/: page.tsx
frontend/app/(workspace)/positions/: page.tsx
frontend/app/(workspace)/settings/keys/: page.tsx
frontend/app/(workspace)/settings/preferences/: page.tsx
frontend/app/(workspace)/settings/providers/: page.tsx
frontend/app/(workspace)/tax/: page.tsx
frontend/app/(workspace)/trades/: page.tsx
frontend/app/(workspace)/upload/: page.tsx
frontend/lib/: api.ts
